# RTNeural-compare

./: .gitignore  CMakeLists.txt  README.md  analyze_results.py  benchmark.cpp  run_bench.sh
bench_models/: model.py
onnx_models/: model.py
results/: analyze_results.py  bench_eigen.txt  bench_stl.txt  bench_xsimd.txt
src/: benchmark.cpp  onnx_layer.hpp  rtneural_layer.hpp  tflite_layer.hpp  torch_layer.hpp
